
[TestNextToken/simple_input - 1]
[ASSIGN]=>"="
[PLUS]=>"+"
[LPAREN]=>"("
[RPAREN]=>")"
[LBRACE]=>"{"
[RBRACE]=>"}"
[COMMA]=>","
[SEMICOLON]=>";"
[EOF]=>""
---

[TestNextToken/monkey_source_code_input - 1]
[LET]=>"let"
[IDENT]=>"five"
[ASSIGN]=>"="
[INT]=>"5"
[SEMICOLON]=>";"
[LET]=>"let"
[IDENT]=>"ten"
[ASSIGN]=>"="
[INT]=>"10"
[SEMICOLON]=>";"
[LET]=>"let"
[IDENT]=>"add"
[ASSIGN]=>"="
[FUNCTION]=>"fn"
[LPAREN]=>"("
[IDENT]=>"x"
[COMMA]=>","
[IDENT]=>"y"
[RPAREN]=>")"
[LBRACE]=>"{"
[IDENT]=>"x"
[PLUS]=>"+"
[IDENT]=>"y"
[SEMICOLON]=>";"
[RBRACE]=>"}"
[SEMICOLON]=>";"
[LET]=>"let"
[IDENT]=>"result"
[ASSIGN]=>"="
[IDENT]=>"add"
[LPAREN]=>"("
[IDENT]=>"five"
[COMMA]=>","
[IDENT]=>"ten"
[RPAREN]=>")"
[SEMICOLON]=>";"
[EOF]=>""
---

[TestNextToken/monkey_source_code_more_identifiers - 1]
[LET]=>"let"
[IDENT]=>"fine"
[ASSIGN]=>"="
[INT]=>"5"
[SEMICOLON]=>";"
[LET]=>"let"
[IDENT]=>"ten"
[ASSIGN]=>"="
[INT]=>"10"
[SEMICOLON]=>";"
[LET]=>"let"
[IDENT]=>"add"
[ASSIGN]=>"="
[FUNCTION]=>"fn"
[LPAREN]=>"("
[IDENT]=>"x"
[COMMA]=>","
[IDENT]=>"y"
[RPAREN]=>")"
[LBRACE]=>"{"
[IDENT]=>"x"
[PLUS]=>"+"
[IDENT]=>"y"
[SEMICOLON]=>";"
[RBRACE]=>"}"
[SEMICOLON]=>";"
[LET]=>"let"
[IDENT]=>"result"
[ASSIGN]=>"="
[IDENT]=>"add"
[LPAREN]=>"("
[IDENT]=>"five"
[COMMA]=>","
[IDENT]=>"ten"
[RPAREN]=>")"
[SEMICOLON]=>";"
[BANG]=>"!"
[MINUS]=>"-"
[SLASH]=>"/"
[ASTERISK]=>"*"
[INT]=>"5"
[SEMICOLON]=>";"
[INT]=>"5"
[LT]=>"<"
[INT]=>"10"
[GT]=>">"
[INT]=>"5"
[SEMICOLON]=>";"
[IF]=>"if"
[LPAREN]=>"("
[INT]=>"5"
[LT]=>"<"
[INT]=>"10"
[RPAREN]=>")"
[LBRACE]=>"{"
[RETURN]=>"return"
[TRUE]=>"true"
[SEMICOLON]=>";"
[RBRACE]=>"}"
[ELSE]=>"else"
[LBRACE]=>"{"
[RETURN]=>"return"
[FALSE]=>"false"
[SEMICOLON]=>";"
[RBRACE]=>"}"
[INT]=>"10"
[EQ]=>"=="
[INT]=>"10"
[SEMICOLON]=>";"
[INT]=>"10"
[NEQ]=>"!="
[INT]=>"9"
[SEMICOLON]=>";"
[LET]=>"let"
[IDENT]=>"value"
[ASSIGN]=>"="
[INT]=>"10"
[PLUS]=>"+"
[INT]=>"10"
[SEMICOLON]=>";"
[STRING]=>"foobar"
[STRING]=>"foo bar"
[STRING]=>"hello \\n world \\t"
[LBRACKET]=>"["
[INT]=>"1"
[COMMA]=>","
[INT]=>"2"
[RBRACKET]=>"]"
[SEMICOLON]=>";"
[EOF]=>""
---
